started on hover node and view footer - not working

--- a/themes/sass/screen.scss
+++ b/themes/sass/screen.scss
@@ -12,5 +12,6 @@
 @import "_settings/_variables";
 @import "_sidenav-layout";
 @import "_base";
+@import "network";
 @import "../../src/core/visualisations/visualisation";
 
